--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ Template: astra
 body:not(.logged-in) .hide-for-logged-out {
   display: none !important;
 }
+.ast-page-builder-template .hentry {
+  margin: 0;
+  padding: 0;
+}
+.ast-single-post .entry-content a {
+  text-decoration: none;
+}
 body.home section#areas-privadas {
   padding: 100px 4%;
 }
@@ -43,6 +50,8 @@ body #edit-user .gravatar img.avatar {
 }
 body #group-main {
   max-width: 1600px;
+  margin: 4rem auto;
+  padding: 0;
 }
 /* body #lesson-list .ribbon,
 body #lesson-list img {
@@ -56,6 +65,16 @@ body #main-content #content {
   column-gap: 4rem;
   grid-template-columns: repeat(12, 1fr);
 }
+@media (max-width: 1728px) {
+  body #main-content #content {
+    padding: 0 4rem;
+  }
+}
+@media (max-width: 1500px) {
+  body #main-content #content {
+    display: block;
+  }
+}
 body #main-content #content .register-form {
   grid-column-start: 1;
   grid-column-end: 10;
@@ -63,6 +82,8 @@ body #main-content #content .register-form {
 body #main-content #content .login-form {
   grid-column-start: 10;
   grid-column-end: 13;
+  margin: 0 auto;
+  max-width: 54rem;
   padding-top: 3rem;
 }
 body .uo-groups .uo-btn:hover,
@@ -119,6 +140,8 @@ body .uo-groups .dataTables_filter input {
   background: white !important;
 }
 body #uncanny_group_signup_registration_form {
+  margin: 0 auto;
+  max-width: 54rem;
   width: 100%;
 }
 body #uncanny_group_signup_registration_form input {
@@ -155,6 +178,19 @@ body #uncanny_group_signup_registration_form .form-fields {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(4, 1fr);
   margin-left: 1.5rem;
+}
+@media (max-width: 1728px) {
+  body #uncanny_group_signup_registration_form .form-fields {
+    margin-left: 0;
+  }
+}
+@media (max-width: 1200px) {
+  body #uncanny_group_signup_registration_form .form-fields {
+    display: block;
+  }
+  body #uncanny_group_signup_registration_form .form-field {
+    margin-bottom: 1rem;
+  }
 }
 body #uncanny_group_signup_registration_form .form-fields input {
   color: #3961ab;
@@ -242,6 +278,11 @@ body .course-info-top {
   grid-template-columns: repeat(12, 1fr);
   margin-bottom: 4rem;
 }
+@media (max-width: 1728px) {
+  body .course-info-top {
+    margin-bottom: 2rem;
+  }
+}
 body .course-info-bottom {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -252,6 +293,12 @@ body .course-info form {
   grid-row: 2;
   width: 100%;
 }
+@media (max-width: 1728px) {
+  body .course-info form {
+    grid-column-start: 1;
+    grid-column-end: 13;
+  }
+}
 body .course-info .description {
   font-size: 1rem;
   line-height: 1.2;
@@ -259,9 +306,24 @@ body .course-info .description {
   grid-column-start: 5;
   grid-column-end: 13;
 }
+@media (max-width: 1728px) {
+  body .course-info .description {
+    grid-column-start: 1;
+    grid-column-end: 13;
+    margin-left: 0;
+    margin-top: 1.875rem;
+  }
+}
 body .course-info .wp-post-image {
   grid-column-start: 1;
   grid-column-end: 5;
+}
+@media (max-width: 1728px) {
+  body .course-info .wp-post-image {
+    grid-column-start: 1;
+    grid-column-end: 13;
+    max-width: 400px;
+  }
 }
 body .elementor-login button[type='submit'] {
   letter-spacing: 6px;
@@ -520,4 +582,172 @@ body .site-content .post-navigation {
   form .elementor-field-group .elementor-field-textual {
     max-width: 20rem;
   }
+}
+
+/* Learndash */
+body .learndash-wrapper .ld-item-list .ld-item-list-item {
+  border: 1px solid #efefef;
+}
+body .learndash-wrapper .ld-item-list .ld-item-list-item .ld-item-name {
+  align-items: center;
+  display: flex;
+}
+body .learndash-wrapper .ld-item-list .ld-item-list-item a.ld-item-name:hover {
+  color: #3961ab !important;
+}
+body
+  .learndash-wrapper
+  .ld-item-list
+  .ld-item-list-item
+  .ld-item-list-item-preview
+  .ld-status-icon {
+  margin-right: 1rem;
+  margin-top: 0;
+}
+body
+  .learndash-wrapper
+  .ld-item-list
+  .ld-item-list-item
+  .ld-item-list-item-preview {
+  padding: 0.75rem 1.25rem;
+}
+body .learndash-wrapper .ld-status-icon {
+  flex-basis: 1rem;
+  font-size: 0.5rem;
+  height: 1rem;
+  width: 1rem;
+}
+body .learndash-wrapper .ld-status-incomplete.ld-status-icon {
+  border: 1px solid #efefef;
+}
+.ld-alert-certificate {
+  max-width: 50rem;
+}
+body .learndash-wrapper .ld-alert-success {
+  border-color: #dda4cb;
+  margin: 1rem auto;
+  max-width: 50rem;
+}
+body .learndash-wrapper .ld-alert-success .ld-alert-icon {
+  background-color: #dda4cb !important;
+}
+/* Certificates */
+#certificates header {
+  background-color: #2f2940 !important;
+}
+#certificates h1,
+#certificates h2 {
+  width: 100%;
+}
+#certificates h1 {
+  font-size: 2.887rem;
+}
+#certificates h2 {
+  color: #c44186;
+  font-size: 1.424rem;
+  margin-top: 1rem;
+  text-align: left;
+}
+@media (min-width: 1250px) {
+  #certificates h1,
+  #certificates h2 {
+    width: 50%;
+  }
+  #certificates h2 {
+    font-size: 1.2rem;
+    margin-top: 0;
+    text-align: right;
+  }
+}
+#certificates .container {
+  margin: 0;
+  padding: 3rem 1.5rem;
+  max-width: 1600px;
+  width: 100%;
+}
+@media (min-width: 1640px) {
+  #certificates .container {
+    padding: 0;
+    margin: 3rem auto;
+  }
+}
+#certificates .headings-wrapper {
+  display: block;
+  margin-bottom: 5rem;
+}
+@media (min-width: 1250px) {
+  #certificates .headings-wrapper {
+    align-items: flex-end;
+    display: flex;
+  }
+}
+#certificates .info {
+  margin-bottom: 1rem;
+}
+#certificates .info-block {
+  width: 100%;
+}
+@media (min-width: 600px) {
+  #certificates .info-block {
+    width: calc(50% - 2rem);
+  }
+}
+@media (min-width: 1200px) {
+  #certificates .info-block {
+    width: calc(33% - 2rem);
+  }
+}
+@media (min-width: 1640px) {
+  #certificates .info-block {
+    width: calc(25% - 2rem);
+  }
+}
+#certificates .info-block-contents {
+  width: 100%;
+}
+#certificates .label {
+  color: #3961ab;
+  font-size: 0.702rem;
+  margin-bottom: 0;
+  text-transform: uppercase;
+}
+#certificates .lesson {
+  border: 0.1rem solid #e3edff;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 1rem 1.5rem 0.25rem;
+  width: 100%;
+}
+@media (min-width: 1200px) {
+  #certificates .lesson {
+    width: calc(50% - 1rem);
+  }
+}
+#certificates .lesson-info {
+  font-size: 1.125rem;
+  margin-bottom: 0.5rem;
+}
+#certificates .lesson-title {
+  color: #3961ab;
+  font-size: 0.889rem;
+  margin-bottom: 0.75rem;
+  text-align: right;
+}
+#certificates .lessons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+#certificates .info {
+  font-size: 1.125rem;
+}
+#certificates .info-block-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem 2rem;
+  margin-bottom: 1rem;
+}
+#certificates .info-block-wrapper .lessons {
+  display: block;
 }
